--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
+html{
+    height: 100%;
+}
 body{
    margin: 0;
+   height:100%;
 }
 
 .menu {
@@ -1717,6 +1721,7 @@ body{
         font-size: 100%;
     }
 }
+
 
 
 
